--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -4,6 +4,6 @@ db.database=devdb
 db.username=devdb_owner
 db.password=password
 host_name=localhost:8080/
-#spring.r2dbc.properties.sslMode=DISABLE
+
 spring.liquibase.url=jdbc:postgresql://localhost:5432/devdb
-#spring.r2dbc.url=r2dbc:postgresql://localhost:5432/devdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/devdb
