--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 camel.springboot.main-run-controller=true
 
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.default-schema=${db.schema}
 spring.liquibase.enabled=true
 spring.liquibase.url=jdbc:postgresql://apache-camel-db/devdb
