--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 camel.springboot.main-run-controller=true
 
 
+spring.log.category."org.jboss.resteasy".level=INFO
+spring.log.category."org.apache.http.impl.execchain".level=DEBUG
+
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.default-schema=${db.schema}
 spring.liquibase.enabled=true
@@ -11,3 +14,6 @@ spring.liquibase.password=${db.password}
 spring.datasource.url=jdbc:postgresql://apache-camel-db/devdb
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
+
+quartz.enabled=true
+daily.load-cron = 0/5 0 0 ? * * *
